# mimiclaw

./: BUTTON_CONTROLS.md  DISPLAY_UI_DESIGN.md  FOUR_GRID_UI.md  LCD_TEST_GUIDE.md  LOW_POWER_OPTIMIZATION.md  T-DISPLAY-S3-SUPPORT.md  sdkconfig.defaults.esp32s3
archived/: README.md
archived/docs/: BUILD_AND_TEST_GUIDE.md  IMPLEMENTATION_SUMMARY.md
archived/test-code/: display_test.h  mimi_test.c
main/: CMakeLists.txt  CMakeLists.txt.test  button_driver.c  button_driver.h  display_manager.c  display_manager.h  idf_component.yml  mimi.c  mimi_config.h
main/agent/: agent_loop.c
main/bus/: message_bus.h
main/cli/: serial_cli.c
main/display/: display_manager.c  display_manager.cpp  display_manager.h  display_test.c  display_ui.c  display_ui.h  telegram_status.c  telegram_status.h
main/telegram/: telegram_bot.c
main/tools/: tool_get_time.c  tool_registry.c
main/wifi/: wifi_manager.c
